<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailUpcomingActivity"
    android:background="@color/black">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/RoundedImageView"
        android:background="@color/black"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/imgLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/black"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="">

            <ImageView
                android:id="@+id/imgMovieBack"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:alpha="0.1"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_placeholder"
                android:contentDescription="@string/bos"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgMovie"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_placeholder"
                app:shapeAppearanceOverlay="@style/RoundedImageView" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>



        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:padding="30dp">

            <TextView
                android:id="@+id/tvMovieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Movie Name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMovieTagLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sub_title"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />

            <TextView
                android:id="@+id/tvMovieInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/movie_info"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieTagLine" />

            <TextView
                android:id="@+id/tvMovieDateReleaseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Released: "
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieInfo" />

            <TextView
                android:id="@+id/tvMovieDateRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2019"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieDateReleaseTitle"
                app:layout_constraintStart_toEndOf="@+id/tvMovieDateReleaseTitle" />

            <TextView
                android:id="@+id/tvMovieRatingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratingTitle"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieDateReleaseTitle" />

            <TextView
                android:id="@+id/tvMovieRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieRatingTitle"
                app:layout_constraintStart_toEndOf="@+id/tvMovieRatingTitle" />

            <TextView
                android:id="@+id/tvMovieGenresTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Genres :"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieRatingTitle" />

            <TextView
                android:id="@+id/tvMovieGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Genres"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieGenresTitle"
                app:layout_constraintStart_toEndOf="@+id/tvMovieGenresTitle" />

            <TextView
                android:id="@+id/tvMovieBudgetTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budgetTitle"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieGenresTitle" />

            <TextView
                android:id="@+id/tvMovieBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/_130_000"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieBudgetTitle"
                app:layout_constraintStart_toEndOf="@+id/tvMovieBudgetTitle" />

            <TextView
                android:id="@+id/tvMovieRevenueTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revenue"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieBudgetTitle" />

            <TextView
                android:id="@+id/tvMovieRevenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/_130_000"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvMovieRevenueTitle"
                app:layout_constraintStart_toEndOf="@+id/tvMovieRevenueTitle" />

            <TextView
                android:id="@+id/tvMovieOverviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieRevenueTitle" />

            <TextView
                android:id="@+id/tvMovieOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMovieOverviewTitle" />


            <ImageView
                android:id="@+id/companyImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieOverview" />

            <TextView
                android:id="@+id/companyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="3"
                android:ellipsize="end"
                android:text="Company"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/companyImg"
                app:layout_constraintTop_toBottomOf="@+id/tvMovieOverview"
                app:layout_constraintVertical_bias="0.5"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:src="@drawable/arrow"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"/>

    <ProgressBar
        android:id="@+id/prgBarMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>